@@ -51,3 +51,4 @@ Problem:
   Starting point: [4](1,5,5,1)
   Infinity value (for all functions): inf
 A solution should have been found. Failing...
+Infeasible guess for linear and non-linear constraints.
